--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2024 Rani Chennamma Security and Manpower Services. All rights reserved.</p>
+            <p>&copy; 2023-2024 RC Security and Manpower Services. All rights reserved.</p>
         </div>
     </footer>
 
